--- a/src/App.scss
+++ b/src/App.scss
@@ -12,7 +12,8 @@
 		justify-content: center;
 		align-items: center;
 		gap: 25px;
-		background-color: rgba(243, 243, 243, 0.226);
+		// background-color: rgba(207, 206, 206, 0.226);
+		background-color: rgb(29, 29, 29);
 		backdrop-filter: blur(8px);
 		padding: 20px;
 		border-radius: 40px;
@@ -20,7 +21,7 @@
 		& a {
 			text-decoration: none;
 			font-size: 18px;
-			color: black;
+			color: rgb(221, 221, 221);
 		}
 	}
 }
