--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -1,35 +1,159 @@
 /** @format */
+// =============================
+// ==== HERO SECTION STYLES ====
+// =============================
 
 .homewrp {
-	padding: 0px 4%;
-	.homecont {
-		display: flex;
-		align-items: center;
-		justify-content: space-between;
-		.homecont-left {
-			width: 55%;
-		}
-		.homecont-right {
-			width: 45%;
-			display: flex;
-			align-items: center;
-			gap: 25px;
+  padding: 30px 2%;
+  background-color: rgb(243, 242, 242);
+  border-radius: 30px;
+  .homecont {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    // background-color: blue;
+    .homecont-left {
+      width: 50%;
 
-			& img {
-				width: 100%;
-			}
-
-      .image img{
-        width: 100%;
-        height: 500px;
+      & h1 {
+        font-size: 3rem;
+        position: relative;
+        // text-align: center;
       }
 
-			.images {
-				display: flex;
-				flex-direction: column;
-        width: 45%;
-				gap: 20px;
-			}
-		}
-	}
+      .homecont-left h1::before {
+        content: "";
+        height: 200px;
+        width: 200px;
+        border-radius: 100px;
+        background-color: #f98826;
+        position: absolute;
+        top: -20px;
+        left: -20px;
+        z-index: -1;
+        // background-color: aqua;
+      }
+    }
+
+
+    .home-images {
+      padding: 20px 0px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      margin: 0px auto;
+      // background-color: red;
+      gap: 20px;
+      width: 50%;
+
+      .images {
+        display: flex;
+        align-items: center;
+        // justify-content: center;
+        flex-direction: column;
+        gap: 20px;
+        width: 95%;
+      }
+
+      .imgmain {
+        width: 95%;
+      }
+
+      & img {
+        width: 100%;
+        border-radius: 20px;
+      }
+    }
+  }
+}
+
+// ============================
+// ==== WHAT WE DO STYLING ====
+// ============================
+
+.whatwedo-wrp {
+  // background-color: rgba(218, 230, 247, 0.747);
+  padding: 40px 3%;
+
+  .whatwedo-cont {
+    & h1 {
+      font-size: 3rem;
+      padding-bottom: 20px;
+    }
+
+    .homecards-cont {
+      display: grid;
+      grid-template-columns: repeat(3, 1fr);
+      gap: 20px;
+      align-items: center;
+      .cardcont {
+        background-color: rgb(240, 240, 240);
+        width: 100%;
+        padding: 35px;
+        display: flex;
+        flex-direction: column;
+        border-radius: 20px;
+        gap: 20px;
+
+        .icon {
+          background-color: rgb(177, 170, 240);
+          padding: 20px;
+          height: fit-content;
+          width: fit-content;
+          border-radius: 5px;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          margin: 0px auto;
+        }
+
+        & p {
+          font-size: 20px;
+        }
+      }
+    }
+  }
+}
+
+
+// ========================
+// ==== GALLERY STYLES ====
+// ========================
+
+.gallery-grid {
+  padding: 50px 3%;
+  display: flex;
+  flex-direction: column;
+  // align-items: center;
+  gap: 20px;
+  margin: 0px auto;
+  .galleryimg {
+    display: flex;
+    align-items: center;
+    // justify-content: center;
+    flex-direction: column;
+    gap: 20px;
+    width: 100%;
+    // margin: 0px auto;
+    & img {
+      width: 100%;
+      height: 350px;
+      object-fit: cover;
+      border-radius: 20px;
+    }
+  }
+  .galleryimg-main {
+    width: 45%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 0px auto;
+    gap: 20px;
+    & img {
+      width: 100%;
+      border-radius: 20px;
+      object-fit: cover;
+      height: 350px;
+    }
+  }
 }
