--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -95,6 +95,9 @@
         border-radius: 20px;
         gap: 20px;
 
+
+
+       
         .icon {
           background-color: rgb(177, 170, 240);
           padding: 20px;
@@ -106,6 +109,33 @@
           justify-content: center;
           margin: 0px auto;
         }
+        .icon2 {
+          background-color: rgb(170, 240, 217);
+          padding: 20px;
+          height: fit-content;
+          width: fit-content;
+          border-radius: 5px;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          margin: 0px auto;
+        }
+        .icon3 {
+          background-color: rgb(170, 238, 240);
+          padding: 20px;
+          height: fit-content;
+          width: fit-content;
+          border-radius: 5px;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          margin: 0px auto;
+        }
+       
+    
+        
+
+   
 
         & p {
           font-size: 20px;
