--- a/src/App.scss
+++ b/src/App.scss
@@ -3,6 +3,14 @@
 	display: flex;
 	align-items: center;
 	padding: 20px 4%;
+
+	.navlogo {
+		// background-color: red;
+
+		& img {
+			object-fit: cover;
+		}
+	}
 }
 .navconts {
 	margin: 0px auto;
