--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -81,40 +81,40 @@
       padding-bottom: 20px;
     }
 
-    .homecards-cont {
-      display: grid;
-      grid-template-columns: repeat(3, 1fr);
-      gap: 20px;
-      align-items: center;
-      .cardcont {
-        background-color: rgb(240, 240, 240);
-        width: 100%;
-        padding: 35px;
-        display: flex;
-        flex-direction: column;
-        border-radius: 20px;
-        gap: 20px;
-
-        .icon {
-          background-color: rgb(177, 170, 240);
-          padding: 20px;
-          height: fit-content;
-          width: fit-content;
-          border-radius: 5px;
-          display: flex;
-          align-items: center;
-          justify-content: center;
-          margin: 0px auto;
-        }
-
-        & p {
-          font-size: 20px;
-        }
-      }
-    }
   }
 }
 
+.homecards-cont {
+	display: grid;
+	grid-template-columns: repeat(3, 1fr);
+	gap: 20px;
+	// align-items: center;
+	.cardcont {
+		background-color: rgb(240, 240, 240);
+		width: 100%;
+		padding: 35px;
+		display: flex;
+		flex-direction: column;
+		border-radius: 20px;
+		gap: 20px;
+
+		.icon {
+			background-color: rgb(177, 170, 240);
+			padding: 20px;
+			height: fit-content;
+			width: fit-content;
+			border-radius: 5px;
+			display: flex;
+			// align-items: center;
+			// justify-content: center;
+			// margin: 0px auto;
+		}
+
+		& p {
+			font-size: 20px;
+		}
+	}
+}
 
 // ========================
 // ==== GALLERY STYLES ====
@@ -128,7 +128,7 @@
   gap: 20px;
   margin: 0px auto;
   .galleryimg {
-    display: flex;
+    display: none;
     align-items: center;
     // justify-content: center;
     flex-direction: column;
@@ -143,7 +143,7 @@
     }
   }
   .galleryimg-main {
-    width: 45%;
+    width: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -153,7 +153,30 @@
       width: 100%;
       border-radius: 20px;
       object-fit: cover;
-      height: 350px;
+      height: 500px;
     }
+
+		.img-frist {
+			width: 65%;
+			height: 500px;
+
+			& img {
+				height: inherit;
+			}
+		}
+
+		.img-second {
+			width: 35%;
+		}
+
   }
+}
+
+
+// =========================
+// ==== SERVICES STYLES ====
+// =========================
+
+.our-service-wrp {
+	padding: 0px 3%;
 }
