--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -1,70 +1,118 @@
 /** @format */
+
+// =======================
+// ==== RESPNSIVENESS ====
+// =======================
+
+@mixin responsiveness($breakpoint) {
+	@if ($breakpoint == medium) {
+		@media (width <= 990px) {
+			@content;
+		}
+	}
+
+	@if ($breakpoint == tab) {
+		@media (width <= 820px) {
+			@content;
+		}
+	}
+
+	@if ($breakpoint == small) {
+		@media (width <= 575px) {
+			@content;
+		}
+	}
+
+	@if ($breakpoint == xs) {
+		@media (width <= 425px) {
+			@content;
+		}
+	}
+}
+
 // =============================
 // ==== HERO SECTION STYLES ====
 // =============================
 
 .homewrp {
-  padding: 30px 2%;
-  background-color: rgb(243, 242, 242);
-  border-radius: 30px;
-  .homecont {
-    display: flex;
-    align-items: center;
-    gap: 10px;
-    // background-color: blue;
-    .homecont-left {
-      width: 50%;
+	padding: 30px 2%;
+	background-color: rgb(243, 242, 242);
+	border-radius: 30px;
+	.homecont {
+		display: flex;
+		align-items: center;
+		gap: 10px;
+		// background-color: blue;
 
-      & h1 {
-        font-size: 3rem;
-        position: relative;
-        // text-align: center;
-      }
+		// ====> Responsiveness ====>
+		@include responsiveness(medium) {
+			flex-direction: column;
+		}
 
-      .homecont-left h1::before {
-        content: "";
-        height: 200px;
-        width: 200px;
-        border-radius: 100px;
-        background-color: #f98826;
-        position: absolute;
-        top: -20px;
-        left: -20px;
-        z-index: -1;
-        // background-color: aqua;
-      }
-    }
+		.homecont-left {
+			width: 50%;
 
+			@include responsiveness(medium) {
+				width: 100%;
+			}
 
-    .home-images {
-      padding: 20px 0px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      margin: 0px auto;
-      // background-color: red;
-      gap: 20px;
-      width: 50%;
+			& h1 {
+				font-size: 3rem;
+				position: relative;
+				// text-align: center;
 
-      .images {
-        display: flex;
-        align-items: center;
-        // justify-content: center;
-        flex-direction: column;
-        gap: 20px;
-        width: 95%;
-      }
+				// ====> Responsiveness ====>
+				@include responsiveness(medium) {
+					font-size: 2rem;
+					text-align: center;
+				}
 
-      .imgmain {
-        width: 95%;
-      }
+				@include responsiveness(xs) {
+					font-size: 1.5rem;
+				}
+			}
+		}
 
-      & img {
-        width: 100%;
-        border-radius: 20px;
-      }
-    }
-  }
+		.home-images {
+			padding: 20px 0px;
+			display: flex;
+			align-items: center;
+			justify-content: center;
+			margin: 0px auto;
+			// background-color: red;
+			gap: 20px;
+			width: 50%;
+			@include responsiveness(xs) {
+				width: 80%;
+			}
+
+			.images {
+				display: flex;
+				align-items: center;
+				// justify-content: center;
+				flex-direction: column;
+				gap: 20px;
+				width: 95%;
+
+				@include responsiveness(xs) {
+					width: 100%;
+				}
+			}
+
+			.imgmain {
+				width: 95%;
+
+				@include responsiveness(xs) {
+					width: 100%;
+				}
+			}
+
+			& img {
+				width: 100%;
+				border-radius: 20px;
+			}
+		}
+	}
 }
 
 // ============================
@@ -72,95 +120,114 @@
 // ============================
 
 .whatwedo-wrp {
-  // background-color: rgba(218, 230, 247, 0.747);
-  padding: 40px 3%;
+	// background-color: rgba(218, 230, 247, 0.747);
+	padding: 40px 3%;
 
-  .whatwedo-cont {
-    & h1 {
-      font-size: 3rem;
-      padding-bottom: 20px;
-    }
+	.whatwedo-cont {
+		& h1 {
+			font-size: 3rem;
+			padding-bottom: 20px;
 
-    .homecards-cont {
-      display: grid;
-      grid-template-columns: repeat(3, 1fr);
-      gap: 20px;
-      align-items: center;
-      .cardcont {
-        background-color: rgb(240, 240, 240);
-        width: 100%;
-        padding: 35px;
-        display: flex;
-        flex-direction: column;
-        border-radius: 20px;
-        gap: 20px;
+			@include responsiveness(medium) {
+				font-size: 2rem;
+			}
 
-
-
-       
-        .icon {
-          background-color: rgb(177, 170, 240);
-          padding: 20px;
-          height: fit-content;
-          width: fit-content;
-          border-radius: 5px;
-          display: flex;
-          align-items: center;
-          justify-content: center;
-          margin: 0px auto;
-        }
-        .icon2 {
-          background-color: rgb(170, 240, 217);
-          padding: 20px;
-          height: fit-content;
-          width: fit-content;
-          border-radius: 5px;
-          display: flex;
-          align-items: center;
-          justify-content: center;
-          margin: 0px auto;
-        }
-        .icon3 {
-          background-color: rgb(170, 238, 240);
-          padding: 20px;
-          height: fit-content;
-          width: fit-content;
-          border-radius: 5px;
-          display: flex;
-          align-items: center;
-          justify-content: center;
-          margin: 0px auto;
-        }
-       
-    
-        
-
-   
-		.icon {
-			background-color: rgb(177, 170, 240);
-			padding: 20px;
-			height: fit-content;
-			width: fit-content;
-			border-radius: 5px;
-			display: flex;
-			// align-items: center;
-			// justify-content: center;
-			// margin: 0px auto;
+			@include responsiveness(small) {
+				font-size: 1.5rem;
+			}
 		}
 
-        & p {
-          font-size: 20px;
-        }
-      }
-    }
-  }
+		.homecards-cont {
+			display: grid;
+			grid-template-columns: repeat(3, 1fr);
+			gap: 20px;
+
+			// ====> Responsiveness ====>
+			@include responsiveness(medium) {
+				grid-template-columns: repeat(2, 1fr);
+			}
+
+			@include responsiveness(small) {
+				grid-template-columns: repeat(1, 1fr);
+			}
+
+			.cardcont {
+				background-color: rgb(240, 240, 240);
+				width: 100%;
+				padding: 35px;
+				display: flex;
+				flex-direction: column;
+				border-radius: 20px;
+				gap: 20px;
+
+				.icon {
+					background-color: rgb(177, 170, 240);
+					padding: 20px;
+					height: fit-content;
+					width: fit-content;
+					border-radius: 5px;
+					display: flex;
+					align-items: center;
+					justify-content: center;
+					margin: 0px auto;
+				}
+				.icon2 {
+					background-color: rgb(170, 240, 217);
+					padding: 20px;
+					height: fit-content;
+					width: fit-content;
+					border-radius: 5px;
+					display: flex;
+					align-items: center;
+					justify-content: center;
+					margin: 0px auto;
+				}
+				.icon3 {
+					background-color: rgb(170, 238, 240);
+					padding: 20px;
+					height: fit-content;
+					width: fit-content;
+					border-radius: 5px;
+					display: flex;
+					align-items: center;
+					justify-content: center;
+					margin: 0px auto;
+				}
+
+				.icon {
+					background-color: rgb(177, 170, 240);
+					padding: 20px;
+					height: fit-content;
+					width: fit-content;
+					border-radius: 5px;
+					display: flex;
+					// align-items: center;
+					// justify-content: center;
+					// margin: 0px auto;
+				}
+
+				& p {
+					font-size: 20px;
+				}
+			}
+		}
+	}
 }
 
 .homecards-cont {
 	display: grid;
 	grid-template-columns: repeat(3, 1fr);
 	gap: 20px;
-	// align-items: center;
+
+	// ====> Responsiveness ====>
+	@include responsiveness(medium) {
+		grid-template-columns: repeat(2, 1fr);
+	}
+
+	@include responsiveness(small) {
+		grid-template-columns: repeat(1, 1fr);
+	}
+
 	.cardcont {
 		background-color: rgb(240, 240, 240);
 		width: 100%;
@@ -193,44 +260,57 @@
 // ========================
 
 .gallery-grid {
-  padding: 50px 3%;
-  display: flex;
-  flex-direction: column;
-  // align-items: center;
-  gap: 20px;
-  margin: 0px auto;
-  .galleryimg {
-    display: none;
-    align-items: center;
-    // justify-content: center;
-    flex-direction: column;
-    gap: 20px;
-    width: 100%;
-    // margin: 0px auto;
-    & img {
-      width: 100%;
-      height: 350px;
-      object-fit: cover;
-      border-radius: 20px;
-    }
-  }
-  .galleryimg-main {
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin: 0px auto;
-    gap: 20px;
-    & img {
-      width: 100%;
-      border-radius: 20px;
-      object-fit: cover;
-      height: 500px;
-    }
+	padding: 50px 3%;
+	display: flex;
+	flex-direction: column;
+	// align-items: center;
+	gap: 20px;
+	margin: 0px auto;
+	.galleryimg {
+		display: none;
+		align-items: center;
+		// justify-content: center;
+		flex-direction: column;
+		gap: 20px;
+		width: 100%;
+		// margin: 0px auto;
+		& img {
+			width: 100%;
+			height: 350px;
+			object-fit: cover;
+			border-radius: 20px;
+		}
+	}
+	.galleryimg-main {
+		width: 100%;
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		margin: 0px auto;
+		gap: 20px;
+		@include responsiveness(xs) {
+			flex-direction: column;
+		}
+		& img {
+			width: 100%;
+			border-radius: 20px;
+			object-fit: cover;
+			height: 500px;
+      
+			@include responsiveness(xs) {
+				width: 100%;
+				height: 250px;
+			}
+		}
 
 		.img-frist {
 			width: 65%;
 			height: 500px;
+
+			@include responsiveness(xs) {
+				width: 100%;
+				height: 250px;
+			}
 
 			& img {
 				height: inherit;
@@ -239,11 +319,13 @@
 
 		.img-second {
 			width: 35%;
+
+			@include responsiveness(xs) {
+				width: 100%;
+			}
 		}
-
-  }
+	}
 }
-
 
 // =========================
 // ==== SERVICES STYLES ====
