--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -334,3 +334,10 @@
 .our-service-wrp {
 	padding: 0px 3%;
 }
+.footer{
+	text-align: center;
+	margin-top: 20px;
+	background-color: rgb(240, 240, 240);
+	padding:40px;
+	border-radius: 20px;
+}
