--- a/src/App.scss
+++ b/src/App.scss
@@ -47,7 +47,6 @@
 	}
 }
 .navconts {
-
 	.navitems {
 		display: flex;
 		justify-content: center;
@@ -67,7 +66,37 @@
 		& a {
 			text-decoration: none;
 			font-size: 18px;
-			color: rgb(221, 221, 221);
+			color: rgb(12, 12, 12);
 		}
+	}
+
+	.navicon {
+		display: none;
+
+		@include responsiveness(medium) {
+			display: flex;
+		}
+	}
+}
+
+
+// =======> =======> ==============>
+//  =======> DRAWER STYLES ========>
+// ========> ============> ========>
+
+.navlinks {
+	display: flex;
+	flex-direction: column;
+	gap: 20px;
+	padding-top: 20px;
+
+	& a {
+		color: black;
+		text-decoration: none;
+		font-size: 20px;
+		padding: 20px;
+		display: flex;
+		align-items: center;
+		background-color: whitesmoke;
 	}
 }
