--- a/src/styles/contact.scss
+++ b/src/styles/contact.scss
@@ -1,34 +1,74 @@
+/** @format */
+
+// =======================
+// ==== RESPNSIVENESS ====
+// =======================
+
+@mixin responsiveness($breakpoint) {
+	@if ($breakpoint == medium) {
+		@media (width <= 990px) {
+			@content;
+		}
+	}
+
+	@if ($breakpoint == tab) {
+		@media (width <= 820px) {
+			@content;
+		}
+	}
+
+	@if ($breakpoint == small) {
+		@media (width <= 575px) {
+			@content;
+		}
+	}
+
+	@if ($breakpoint == xs) {
+		@media (width <= 425px) {
+			@content;
+		}
+	}
+}
+
 .contact-wrp {
-  // background-color: rgb(226, 226, 255);
+	// background-color: rgb(226, 226, 255);
 
-  .contactcont {
-    display: flex;
-    // align-items: center;
-    justify-content: space-between;
-    gap: 20px;
+	.contactcont {
+		display: flex;
+		// align-items: center;
+		justify-content: space-between;
+		gap: 20px;
 
-    .contactlft {
-      background-color: rgb(235, 235, 235);
-      width: 50%;
-      display: flex;
-      align-items: center;
-      justify-content: center;
+		.contactlft {
+			background-color: rgb(235, 235, 235);
+			width: 50%;
+			display: flex;
+			align-items: center;
+			justify-content: center;
 
-      & img {
-        width: 80%;
-      }
-    }
+			& img {
+				width: 80%;
+			}
 
-    .contactrght {
-      width: 50%;
-      // background-color: yellowgreen;
-      padding: 20px;
+			@include responsiveness(medium) {
+				display: none;
+			}
+		}
 
-      & form {
-        display: flex;
-        flex-direction: column;
-        gap: 10px;
-      }
-    }
-  }
+		.contactrght {
+			width: 50%;
+			// background-color: yellowgreen;
+			padding: 20px;
+
+			& form {
+				display: flex;
+				flex-direction: column;
+				gap: 10px;
+			}
+
+			@include responsiveness(medium) {
+				width: 100%;
+			}
+		}
+	}
 }
