--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -336,8 +336,8 @@
 }
 .footer{
 	text-align: center;
-	margin-top: 20px;
-	background-color: rgb(240, 240, 240);
-	padding:40px;
-	border-radius: 20px;
+	margin-top: 10px;
+	border: 1px solid rgb(224, 224, 224);
+	padding:10px;
+
 }
